--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div></div>
       <div></div>
     </div>
-    <div id="skrews">
+    <div id="screws">
       <div></div>
       <div></div>
     </div>
